tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generic_as_param_type/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type, found numeric generic
  ┌─ src/main.nr:2:31
  │
2 │     pub fn foo<let I: u32>(x: I) -> I {
  │                               - not a type
  │

error: Expected type, found numeric generic
  ┌─ src/main.nr:2:37
  │
2 │     pub fn foo<let I: u32>(x: I) -> I {
  │                                     - not a type
  │

error: Expected type, found numeric generic
  ┌─ src/main.nr:5:17
  │
5 │         let _q: I = 5;
  │                 - not a type
  │

Aborting due to 3 previous errors
